--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,12 @@ dependencies:
   cloud_firestore: ^5.6.11
   cupertino_icons: ^1.0.8
   firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^5.0.0
+  # flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
 
